- Resolve `IMEServer#select` logic with minor delay for better IME switching. - Enhance null-safety and enforce single-instance behavior for `StampEditorDialog`. - Minor fixes in method documentation and code optimizations (e.g., `keys.getFirst()`, list handling adjustments). - Refactor to replace Javadoc comments with `///` for consistency across multiple classes (`StampEditorDialog`, `DiagnosisDocument`, `IMEServer`, etc.).